--- a/jero-frontend/app/components/Navbar/NavbarPC/Navbar.module.css
+++ b/jero-frontend/app/components/Navbar/NavbarPC/Navbar.module.css
@@ -71,7 +71,7 @@
 /*
 https://www.w3schools.com/howto/howto_css_dropdown.asp
 */
-.dropdownContent {
+/* .dropdownContent {
   display: none;
   position: absolute;
   background-color: #fff;
@@ -86,6 +86,12 @@ https://www.w3schools.com/howto/howto_css_dropdown.asp
 
 .dropdown:hover .dropdownContent {
   display: block;
+} */
+
+@media only screen and (max-width: 2000px) {
+  .searchBar{
+    min-width: 82.5%;
+  }
 }
 
 @media only screen and (max-width: 960px) {
